# sysghost

./: LICENSE  Makefile.am  README  README.md  configure.ac  depcomp  magic.files
.github/workflows/: c-cpp.yml
doc/: tests.txt
include/: cpu.h  date.h  exec.h  fs.h  halt.h  hdutils.h  launcher.h  log.h  logind.h  memory.h  monitor.h  mount.h  powerdown.h  process.h  socket.h  umount.h  utils.h  version.h
lib/: Makefile.am  cpu.c  date.c  fs.c  halt.c  hdutils.c  log.c  memory.c  socket.c  utils.c
scripts/: Makefile.am  commands.sh  lib-net.sh  lib.sh  lib_net.sh  p-net-wifi.sh  udevd.sh
src/: Makefile.am  exec.c  fs.c  halt.c  launcher.c  log.c  logind.c  main.c  monitor.c  mount.c  powerdown.c  process.c  sysdown.c  syslogin.c  umount.c
unit/: Makefile.am  main.c
